Added markdown support using 'showdown' markdown library for the browser.  It is preferred to do the conversion in the browser to allow preview as you type service when we come to provide a UI for entering in an article

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
     <!-- The line below must be kept intact for Sencha Cmd to build your application -->
     <script id="microloader" type="text/javascript" src="bootstrap.js"></script>
+    <script type="text/javascript" src="assets/blog_app.js"></script>
 
 </head>
 <body></body>
